--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ cursor: pointer;
 		<nav class="social-icons animated zt" data-animation="fadeInUp" data-animation-delay="500">
 		<ul>
 			<li title="官方邮箱"><a href="http://wxl.pw/email"><i class="fa fa-envelope-o fa-fw"></i> wawa@wawacm.com</a></li>
-			<li title="认证微博"><a href="http://wxl.pw/weibo"><i class="fa fa-code"></i>官方微博</a></li>
-			<li title="官方Q群"><a href="https://jq.qq.com/?_wv=1027&k=5UMfggM"><i class="fa fa-code"></i>官方Q群</a></li>
+			<li title="认证微博"><a href="http://wxl.pw/weibo"><i class="fa fa-weibo"></i>官方微博</a></li>
+			<li title="官方Q群"><a href="https://jq.qq.com/?_wv=1027&k=5UMfggM"><i class="fa fa-group"></i>官方Q群</a></li>
 			<li title="兴趣部落"><a href="http://wxl.pw/buluo"><i class="fa fa-code"></i>兴趣部落</a></li>
 			<br/>
 			<a href="https://defense.yunaq.com/#zid=5c396318796db4172f3f9300"><img src="https://ae01.alicdn.com/kf/HTB1XL_tUmrqK1RjSZK9760yypXaH.png"/></a>
