--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wawacm/wwwyava/static/css/style.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wawacm/wwwyava/static/css/lf.css">
 		<!-- FAVICONS -->
-		<link rel="shortcut icon" href="https://cdnjsqa.wawacm.com/os/wawa.ico">
-		<link rel="apple-touch-icon" href="https://cdnjsqa.wawacm.com/os/wawa.ico">
-		<link rel="apple-touch-icon" sizes="72x72" href="https://cdnjsqa.wawacm.com/os/wawa.ico">
-		<link rel="apple-touch-icon" sizes="114x114" href="https://cdnjsqa.wawacm.com/os/wawa.ico">
+		<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
+		<link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
+		<link rel="apple-touch-icon" sizes="72x72" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
+		<link rel="apple-touch-icon" sizes="114x114" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
 		<style>
 			.yz { position: fixed; z-index: 9; right: 0; bottom: 0; top: expression(offsetParent.scrollTop+offsetParent.clientHeight-150);
 			cursor: pointer; }
@@ -40,7 +40,7 @@
 			<!-- START SITE HEADER -->
 			<header id="awd-site-header">
 				<div id="awd-site-logo" class="animated" data-animation="fadeInDown" data-animation-delay="500">
-					<img class="h-logo" src="https://cdnjsqa.wawacm.com/20201009004820.png"
+					<img class="h-logo" src="https://cdn.jsdelivr.net/gh/wawacmpic/pic/wawacdn/20201009153357.png"
 					alt="Logo">
 				</div>
 				<button class="menu-toggle animated" data-animation="fadeInDown" data-animation-delay="500"
@@ -79,8 +79,8 @@
 								</a>
 							</li>
 							<li>
-								<a href="http://blog.yava.pw/" data-slide="contact">
-									官方博客
+								<a href="https://randompass.wawacm.com/" data-slide="contact">
+									密码生成
 								</a>
 							</li>
 						</ul>
