--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta name="description" content="娃娃团队,娃娃电脑维修,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,高新技术产业开发区福云软件设计工作室,曹远繁">
-		<meta name="keywords" content="娃娃团队,娃娃电脑维修,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,高新技术产业开发区福云软件设计工作室,曹远繁">
+		<meta name="description" content="娃娃团队,娃娃电脑维修,娃娃之家,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,曹远繁">
+		<meta name="keywords" content="娃娃团队,娃娃电脑维修,娃娃之家,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,曹远繁">
 		<meta name="author" content="娃娃电脑维修">
 		<!-- CSS Implementing Plugins -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.4.0/css/font-awesome.min.css">
@@ -27,9 +27,202 @@
 		<style>
 			.yz { position: fixed; z-index: 9; right: 0; bottom: 0; top: expression(offsetParent.scrollTop+offsetParent.clientHeight-150);
 			cursor: pointer; }
+			.deng-box {
+	position: fixed;
+	top: -40px;
+	right: -20px;
+	z-index: 999;
+}
+ 
+.deng-box1 {
+	position: fixed;
+	top: -30px;
+	right: 10px;
+	z-index: 999;
+}
+ 
+.deng-box1 .deng {
+	position: relative;
+	width: 120px;
+	height: 90px;
+	margin: 50px;
+	background: #d8000f;
+	background: rgba(216, 0, 15, 0.8);
+	border-radius: 50% 50%;
+	-webkit-transform-origin: 50% -100px;
+	-webkit-animation: swing 5s infinite ease-in-out;
+	box-shadow: -5px 5px 30px 4px rgba(252, 144, 61, 1);
+}
+ 
+.deng {
+	position: relative;
+	width: 120px;
+	height: 90px;
+	margin: 50px;
+	background: #d8000f;
+	background: rgba(216, 0, 15, 0.8);
+	border-radius: 50% 50%;
+	-webkit-transform-origin: 50% -100px;
+	-webkit-animation: swing 3s infinite ease-in-out;
+	box-shadow: -5px 5px 50px 4px rgba(250, 108, 0, 1);
+}
+ 
+.deng-a {
+	width: 100px;
+	height: 90px;
+	background: #d8000f;
+	background: rgba(216, 0, 15, 0.1);
+	margin: 12px 8px 8px 8px;
+	border-radius: 50% 50%;
+	border: 2px solid #dc8f03;
+}
+ 
+.deng-b {
+	width: 45px;
+	height: 90px;
+	background: #d8000f;
+	background: rgba(216, 0, 15, 0.1);
+	margin: -4px 8px 8px 26px;
+	border-radius: 50% 50%;
+	border: 2px solid #dc8f03;
+}
+ 
+.xian {
+	position: absolute;
+	top: -20px;
+	left: 60px;
+	width: 2px;
+	height: 20px;
+	background: #dc8f03;
+}
+ 
+.shui-a {
+	position: relative;
+	width: 5px;
+	height: 20px;
+	margin: -5px 0 0 59px;
+	-webkit-animation: swing 4s infinite ease-in-out;
+	-webkit-transform-origin: 50% -45px;
+	background: #ffa500;
+	border-radius: 0 0 5px 5px;
+}
+ 
+.shui-b {
+	position: absolute;
+	top: 14px;
+	left: -2px;
+	width: 10px;
+	height: 10px;
+	background: #dc8f03;
+	border-radius: 50%;
+}
+ 
+.shui-c {
+	position: absolute;
+	top: 18px;
+	left: -2px;
+	width: 10px;
+	height: 35px;
+	background: #ffa500;
+	border-radius: 0 0 0 5px;
+}
+ 
+.deng:before {
+	position: absolute;
+	top: -7px;
+	left: 29px;
+	height: 12px;
+	width: 60px;
+	content: " ";
+	display: block;
+	z-index: 999;
+	border-radius: 5px 5px 0 0;
+	border: solid 1px #dc8f03;
+	background: #ffa500;
+	background: linear-gradient(to right, #dc8f03, #ffa500, #dc8f03, #ffa500, #dc8f03);
+}
+ 
+.deng:after {
+	position: absolute;
+	bottom: -7px;
+	left: 10px;
+	height: 12px;
+	width: 60px;
+	content: " ";
+	display: block;
+	margin-left: 20px;
+	border-radius: 0 0 5px 5px;
+	border: solid 1px #dc8f03;
+	background: #ffa500;
+	background: linear-gradient(to right, #dc8f03, #ffa500, #dc8f03, #ffa500, #dc8f03);
+}
+ 
+.deng-t {
+	font-family: 华文行楷,Arial,Lucida Grande,Tahoma,sans-serif;
+	font-size: 3.2rem;
+	color: #dc8f03;
+	font-weight: bold;
+	line-height: 85px;
+	text-align: center;
+}
+ 
+.night .deng-t, 
+.night .deng-box, 
+.night .deng-box1 {
+	background: transparent !important;
+}
+ 
+@-moz-keyframes swing {
+	0% {
+		-moz-transform: rotate(-10deg)
+	}
+ 
+	50% {
+		-moz-transform: rotate(10deg)
+	}
+ 
+	100% {
+		-moz-transform: rotate(-10deg)
+	}
+}
+ 
+@-webkit-keyframes swing {
+	0% {
+		-webkit-transform: rotate(-10deg)
+	}
+ 
+	50% {
+		-webkit-transform: rotate(10deg)
+	}
+ 
+	100% {
+		-webkit-transform: rotate(-10deg)
+	}
+}
 		</style>
 	</head>
 	<body>
+	<!-- 灯笼1 -->
+<div class="deng-box">
+	<div class="deng">
+		<div class="xian"></div>
+		<div class="deng-a">
+			<div class="deng-b"><div class="deng-t">节</div></div>
+		</div>
+		<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
+	</div>
+</div>
+ 
+<!-- 灯笼2 -->
+<div class="deng-box1">
+	<div class="deng">
+		<div class="xian"></div>
+		<div class="deng-a">
+			<div class="deng-b"><div class="deng-t">春</div></div>
+		</div>
+		<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
+	</div>
+</div>
 		<div id="awd-site-wrap" class="bg bg-home">
 			<div id="bg">
 				<div id="overlay">
@@ -58,14 +251,20 @@
 					<div class="nav-container">
 						<!-- START NAVIGATION MENU ITEMS -->
 						<ul>
+						
 							<li>
 								<a href="./666" data-slide="contact">
 									old关于
 								</a>
 							</li>
 							<li>
+								<a href="./666" data-slide="contact">
+									图片压缩
+								</a>
+							</li>
+							<li>
 								<a href="https://monitor.wawawaf.top/" data-slide="contact">
-									监控
+									网站状态
 								</a>
 							</li>
 							<li>
@@ -81,6 +280,16 @@
 							<li>
 								<a href="https://randompass.wawacm.com/" data-slide="contact">
 									密码生成
+								</a>
+							</li>
+							<li>
+								<a href="" data-slide="contact">
+									新春快乐
+								</a>
+							</li>
+							<li>
+								<a href="" data-slide="contact">
+									春节快乐
 								</a>
 							</li>
 						</ul>
@@ -138,7 +347,7 @@
 						© 2021 娃娃团队/wawaCM
 						<i class="fa fa-heart throb my-face" style="color:#d43f57">
 						</i>
-						<a href="http://beian.miit.gov.cn/">渝ICP备15010117号-20</a>
+						<a href="http://beian.miit.gov.cn/">皖ICP备20010366号-1</a>
 					</p>
 					<br/>
 					<br/>
@@ -196,10 +405,10 @@
 						</li>
 						<br/>
 						<a href="https://defense.yunaq.com/#zid=5c396318796db4172f3f9300">
-							<img src="https://cdnjsqa.wawacm.com/20201009005020.png" />
+							<img src="https://cdn.jsdelivr.net/gh/wawacmpic/pic/wawacdn/20210122130301.png" />
 						</a>
 						<a href="http://webscan.360.cn">
-							<img src="https://cdnjsqa.wawacm.com/20201009005046.jpeg" />
+							<img src="https://cdn.jsdelivr.net/gh/wawacmpic/pic/wawacdn/20210122130322.jpeg" />
 						</a>
 						<span id="sitetime">
 						</span>
@@ -267,7 +476,3 @@ chakhsu(document.getElementById('chakhsu'));
 	</body>
 
 </html>
-<!--娃娃团队-->
-<!--备案号:渝ICP备15010117号-20-->
-<!--备案号:渝ICP备15010117号-->
-<!--备案:渝ICP备15010117号-->
