--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 						<a class="landing-button " target="_blank" href="https://about.wawacm.com/">
 							关于我们
 						</a>
-						<a class="landing-button " target="_blank" href="http://sec.yava.pw/">
+						<a class="landing-button " target="_blank" href="https://security.wawacm.com/">
 							应急响应
 						</a>
 						<a class="landing-button " target="_blank" href="https://qa.wawacm.com/">
