--- a/index.html
+++ b/index.html
@@ -253,12 +253,7 @@
 						<ul>
 						
 							<li>
-								<a href="./666" data-slide="contact">
-									old关于
-								</a>
-							</li>
-							<li>
-								<a href="./666" data-slide="contact">
+								<a href="https://imagecompression.wawacm.com" data-slide="contact">
 									图片压缩
 								</a>
 							</li>
