--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
 								</a>
 							</li>
 							<li>
-								<a href="http://qr.lsdgkj.com/" data-slide="contact">
-									二维码生成
+								<a href="https://randompass.wawacm.com/" data-slide="contact">
+									密码生成
 								</a>
 							</li>
 							<li>
-								<a href="https://randompass.wawacm.com/" data-slide="contact">
-									密码生成
+								<a href="https://os.wawacm.com/" data-slide="contact">
+									转境内
 								</a>
 							</li>
 						</ul>
@@ -297,8 +297,8 @@
 						<a class="landing-button " target="_blank" href="https://security.wawacm.com/">
 							应急响应
 						</a>
-						<a class="landing-button " target="_blank" href="https://qa.wawacm.com/">
-							问答社区
+						<a class="landing-button " target="_blank" href="https://game.wxl.pw/">
+							玩小游戏
 						</a>
 					</div>
 					<div class="sections-block">
@@ -326,7 +326,7 @@
 			<footer id="awd-site-footer">
 				<div class="copyright animated" data-animation="fadeInUp" data-animation-delay="500">
 					<p>
-						© 2021 娃娃团队/wawaCM
+						© 2022 娃娃团队/wawaCM
 						<i class="fa fa-heart throb my-face" style="color:#d43f57">
 						</i>
 						<a href="http://beian.miit.gov.cn/">皖ICP备20010366号-1</a>
