--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta name="description" content="娃娃团队,娃娃电脑维修,娃娃之家,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,曹远繁">
-		<meta name="keywords" content="娃娃团队,娃娃电脑维修,娃娃之家,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,曹远繁">
+		<meta name="description" content="娃娃团队,娃娃电脑维修,娃娃之家,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,曹远繁,娃娃團隊">
+		<meta name="keywords" content="娃娃团队,娃娃电脑维修,娃娃之家,免费维修用户电脑,抖音快手视频下载,娃娃论坛,娱乐网,免流,曹远繁,娃娃團隊">
 		<meta name="author" content="娃娃电脑维修">
 		<!-- CSS Implementing Plugins -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.4.0/css/font-awesome.min.css">
@@ -19,190 +19,15 @@
 		<link rel="stylesheet" href="https://cdn.staticfile.org/animate.css/3.7.2/animate.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wawacm/wwwyava/static/css/style.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wawacm/wwwyava/static/css/lf.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wawacm/wwwyava/newosv1.css">
 		<!-- FAVICONS -->
 		<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
 		<link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
 		<link rel="apple-touch-icon" sizes="72x72" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
 		<link rel="apple-touch-icon" sizes="114x114" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
-		<style>
-			.yz { position: fixed; z-index: 9; right: 0; bottom: 0; top: expression(offsetParent.scrollTop+offsetParent.clientHeight-150);
-			cursor: pointer; }
-			.deng-box {
-	position: fixed;
-	top: -40px;
-	right: -20px;
-	z-index: 999;
-}
- 
-.deng-box1 {
-	position: fixed;
-	top: -30px;
-	right: 10px;
-	z-index: 999;
-}
- 
-.deng-box1 .deng {
-	position: relative;
-	width: 120px;
-	height: 90px;
-	margin: 50px;
-	background: #d8000f;
-	background: rgba(216, 0, 15, 0.8);
-	border-radius: 50% 50%;
-	-webkit-transform-origin: 50% -100px;
-	-webkit-animation: swing 5s infinite ease-in-out;
-	box-shadow: -5px 5px 30px 4px rgba(252, 144, 61, 1);
-}
- 
-.deng {
-	position: relative;
-	width: 120px;
-	height: 90px;
-	margin: 50px;
-	background: #d8000f;
-	background: rgba(216, 0, 15, 0.8);
-	border-radius: 50% 50%;
-	-webkit-transform-origin: 50% -100px;
-	-webkit-animation: swing 3s infinite ease-in-out;
-	box-shadow: -5px 5px 50px 4px rgba(250, 108, 0, 1);
-}
- 
-.deng-a {
-	width: 100px;
-	height: 90px;
-	background: #d8000f;
-	background: rgba(216, 0, 15, 0.1);
-	margin: 12px 8px 8px 8px;
-	border-radius: 50% 50%;
-	border: 2px solid #dc8f03;
-}
- 
-.deng-b {
-	width: 45px;
-	height: 90px;
-	background: #d8000f;
-	background: rgba(216, 0, 15, 0.1);
-	margin: -4px 8px 8px 26px;
-	border-radius: 50% 50%;
-	border: 2px solid #dc8f03;
-}
- 
-.xian {
-	position: absolute;
-	top: -20px;
-	left: 60px;
-	width: 2px;
-	height: 20px;
-	background: #dc8f03;
-}
- 
-.shui-a {
-	position: relative;
-	width: 5px;
-	height: 20px;
-	margin: -5px 0 0 59px;
-	-webkit-animation: swing 4s infinite ease-in-out;
-	-webkit-transform-origin: 50% -45px;
-	background: #ffa500;
-	border-radius: 0 0 5px 5px;
-}
- 
-.shui-b {
-	position: absolute;
-	top: 14px;
-	left: -2px;
-	width: 10px;
-	height: 10px;
-	background: #dc8f03;
-	border-radius: 50%;
-}
- 
-.shui-c {
-	position: absolute;
-	top: 18px;
-	left: -2px;
-	width: 10px;
-	height: 35px;
-	background: #ffa500;
-	border-radius: 0 0 0 5px;
-}
- 
-.deng:before {
-	position: absolute;
-	top: -7px;
-	left: 29px;
-	height: 12px;
-	width: 60px;
-	content: " ";
-	display: block;
-	z-index: 999;
-	border-radius: 5px 5px 0 0;
-	border: solid 1px #dc8f03;
-	background: #ffa500;
-	background: linear-gradient(to right, #dc8f03, #ffa500, #dc8f03, #ffa500, #dc8f03);
-}
- 
-.deng:after {
-	position: absolute;
-	bottom: -7px;
-	left: 10px;
-	height: 12px;
-	width: 60px;
-	content: " ";
-	display: block;
-	margin-left: 20px;
-	border-radius: 0 0 5px 5px;
-	border: solid 1px #dc8f03;
-	background: #ffa500;
-	background: linear-gradient(to right, #dc8f03, #ffa500, #dc8f03, #ffa500, #dc8f03);
-}
- 
-.deng-t {
-	font-family: 华文行楷,Arial,Lucida Grande,Tahoma,sans-serif;
-	font-size: 3.2rem;
-	color: #dc8f03;
-	font-weight: bold;
-	line-height: 85px;
-	text-align: center;
-}
- 
-.night .deng-t, 
-.night .deng-box, 
-.night .deng-box1 {
-	background: transparent !important;
-}
- 
-@-moz-keyframes swing {
-	0% {
-		-moz-transform: rotate(-10deg)
-	}
- 
-	50% {
-		-moz-transform: rotate(10deg)
-	}
- 
-	100% {
-		-moz-transform: rotate(-10deg)
-	}
-}
- 
-@-webkit-keyframes swing {
-	0% {
-		-webkit-transform: rotate(-10deg)
-	}
- 
-	50% {
-		-webkit-transform: rotate(10deg)
-	}
- 
-	100% {
-		-webkit-transform: rotate(-10deg)
-	}
-}
-		</style>
 	</head>
 	<body>
-<!-- 灯笼1 
+
 <div class="deng-box">
 	<div class="deng">
 		<div class="xian"></div>
@@ -224,7 +49,7 @@
 	</div>
 </div>
 
--->
+
 		<div id="awd-site-wrap" class="bg bg-home">
 			<div id="bg">
 				<div id="overlay">
@@ -235,18 +60,10 @@
 			<!-- START SITE HEADER -->
 			<header id="awd-site-header">
 				<div id="awd-site-logo" class="animated" data-animation="fadeInDown" data-animation-delay="500">
-					<img class="h-logo" src="https://cdn.jsdelivr.net/gh/wawacm/wwwos/gwlogo.png"
+					<img class="h-logo" src="https://cdn.jsdelivr.net/gh/wawacmpic/pic/wawacdn/202201282325053.png"
 					alt="Logo">
 				</div>
-				<button class="menu-toggle animated" data-animation="fadeInDown" data-animation-delay="500"
-				data-role="toggle">
-					<span>
-					</span>
-					<span>
-					</span>
-					<span>
-					</span>
-				</button>
+
 				<!-- START NAVIGATION -->
 				<nav id="awd-site-nav" class="navigation animated" data-animation="fadeInDown"
 				data-animation-delay="500">
@@ -266,12 +83,22 @@
 							</li>
 							<li>
 								<a href="https://randompass.wawacm.com/" data-slide="contact">
-									密码生成
+									随机密码
 								</a>
 							</li>
 							<li>
 								<a href="https://os.wawacm.com/" data-slide="contact">
-									转境内
+									境内线路
+								</a>
+							</li>
+							<li>
+								<a href="https://os.wawacm.com/" data-slide="contact">
+									新年
+								</a>
+							</li>
+							<li>
+								<a href="https://os.wawacm.com/" data-slide="contact">
+									快乐
 								</a>
 							</li>
 						</ul>
@@ -289,7 +116,7 @@
 					</div>
 					<div class="landing-buttons x">
 						<a class="landing-button " target="_blank" href="https://blog.wxl.pw/">
-							娃娃BLOG
+							官方博客
 						</a>
 						<a class="landing-button " target="_blank" href="https://about.wawacm.com/">
 							关于我们
@@ -297,8 +124,8 @@
 						<a class="landing-button " target="_blank" href="https://security.wawacm.com/">
 							应急响应
 						</a>
-						<a class="landing-button " target="_blank" href="https://game.wxl.pw/">
-							玩小游戏
+						<a class="landing-button " target="_blank" href="https://cheat.wawacm.com/">
+							诈骗查询
 						</a>
 					</div>
 					<div class="sections-block">
