--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="https://os.wawacm.com/" data-slide="contact">
+								<a href="http://os.wawacm.com/" data-slide="contact">
 									境内线路
 								</a>
 							</li>
