--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<link rel="apple-touch-icon" sizes="114x114" href="https://cdn.jsdelivr.net/gh/wawacm/wwwos/favicon.ico">
 	</head>
 	<body>
-
+<!--
 <div class="deng-box">
 	<div class="deng">
 		<div class="xian"></div>
@@ -48,7 +48,7 @@
 		<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
 	</div>
 </div>
-
+ -->
 
 		<div id="awd-site-wrap" class="bg bg-home">
 			<div id="bg">
@@ -91,16 +91,7 @@
 									境内线路
 								</a>
 							</li>
-							<li>
-								<a href="https://os.wawacm.com/" data-slide="contact">
-									新年
-								</a>
-							</li>
-							<li>
-								<a href="https://os.wawacm.com/" data-slide="contact">
-									快乐
-								</a>
-							</li>
+
 						</ul>
 						<!-- END NAVIGATION MENU ITEMS -->
 					</div>
@@ -156,7 +147,7 @@
 						© 2022 娃娃团队/wawaCM
 						<i class="fa fa-heart throb my-face" style="color:#d43f57">
 						</i>
-						<a href="http://beian.miit.gov.cn/">皖ICP备20010366号-1</a>
+						<a href="http://beian.miit.gov.cn/">娃娃团队-境外节点</a>
 					</p>
 					<br/>
 					<br/>
@@ -192,7 +183,7 @@
 							</a>
 						</li>
 						<li title="认证微博">
-							<a href="http://wxl.pw/weibo">
+							<a href="https://weibo.com/u/5585797253">
 								<i class="fa fa-weibo">
 								</i>
 								官方微博
@@ -206,10 +197,10 @@
 							</a>
 						</li>
 						<li title="兴趣部落">
-							<a href="http://wxl.pw/buluo">
+							<a href="https://y.music.163.com/m/artist?app_version=8.8.30&id=51163153&userid=6428210353&dlt=0846">
 								<i class="fa fa-code">
 								</i>
-								兴趣部落
+								网易云
 							</a>
 						</li>
 						<br/>
