--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
 									境内线路
 								</a>
 							</li>
+							<li>
+								<a href="http://picture.wawacm.com/" data-slide="contact">
+									图片合成
+								</a>
+							</li>
+							<li>
+								<a href="http://picadd.wawacm.com/" data-slide="contact">
+									图片水印
+								</a>
+							</li>
 
 						</ul>
 						<!-- END NAVIGATION MENU ITEMS -->
@@ -176,10 +186,10 @@
 				<nav class="social-icons animated zt" data-animation="fadeInUp" data-animation-delay="500">
 					<ul>
 						<li title="官方邮箱">
-							<a href="http://wxl.pw/email">
+							<a href="">
 								<i class="fa fa-envelope-o fa-fw">
 								</i>
-								wawa@wawacm.com
+								a@wxl.pw
 							</a>
 						</li>
 						<li title="认证微博">
