--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
 									图片水印
 								</a>
 							</li>
+							<li>
+								<a href="http://screenstext.wawacm.com/" data-slide="contact">
+									屏幕检测
+								</a>
+							</li>
+							<li>
+								<a href="http://wxtalk.wawacm.com/" data-slide="contact">
+									微信生成
+								</a>
+							</li>
 
 						</ul>
 						<!-- END NAVIGATION MENU ITEMS -->
@@ -230,7 +240,7 @@
 			</footer>
 			</div>
 			<!-- JS -->
-			<script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.11.3/jquery.min.js">
+			<script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.11.3/jquery.min.js"> defer="defer"
 			</script>
 			<script type="text/javascript" src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js">
 			</script>
