--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                                     网络测速
                                 </a>
                             </li>
+                            <li>
+                                <a href="https://monitor.wawacm.com/speed.html" data-slide="contact">
+                                    网站状态
+                                </a>
+                            </li>
                         </ul>
                         <!-- END NAVIGATION MENU ITEMS -->
                     </div>
