--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://monitor.wawacm.com/speed.html" data-slide="contact">
+                                <a href="https://monitor.wawacm.com/" data-slide="contact">
                                     网站状态
                                 </a>
                             </li>
