--- a/index.html
+++ b/index.html
@@ -78,13 +78,18 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://tool.wawacm.com/speed.html" data-slide="contact">
-                                    网络测速
+                                <a href="https://blog.wxl.pw/" data-slide="contact">
+                                    官方博客
                                 </a>
                             </li>
                             <li>
                                 <a href="https://monitor.wawacm.com/" data-slide="contact">
                                     网站状态
+                                </a>
+                            </li>
+							<li>
+                                <a href="https://os.wawacm.com/" data-slide="contact">
+                                    境内官网
                                 </a>
                             </li>
                         </ul>
@@ -101,11 +106,11 @@
                     <div class="jz w" id="wawacm">
                     </div>
                     <div class="landing-buttons x">
-                        <a class="landing-button " target="_blank" href="https://blog.wxl.pw/">
-                            官方博客
+                        <a class="landing-button " target="_blank" href="https://wawacm.top/">
+                            站通导航
                         </a>
-                        <a class="landing-button " target="_blank" href="https://os.wawacm.com/">
-                            境内官网
+                        <a class="landing-button " target="_blank" href="https://movie.yava.pw/">
+                            云亦影视
                         </a>
                         <a class="landing-button " target="_blank" href="https://security.wawacm.com/">
                             应急响应
@@ -139,7 +144,7 @@
             <footer id="awd-site-footer">
                 <div class="copyright animated" data-animation="fadeInUp" data-animation-delay="500">
                     <p>
-                        © 2023 娃娃团队/wawaCM
+                        © 2025 娃娃团队/wawaCM
                         <i class="fa fa-heart throb my-face" style="color:#d43f57">
                         </i>
                         <a href="http://beian.miit.gov.cn/">
@@ -176,7 +181,7 @@
                             <a href="">
                                 <i class="fa fa-envelope-o fa-fw">
                                 </i>
-                                a@wxl.pw
+                                wawa@wawa.email
                             </a>
                         </li>
                         <li title="认证微博">
