--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
             </div>
             <!-- START SITE HEADER -->
             <header id="awd-site-header">
-                <div id="awd-site-logo" class="animated" data-animation="fadeInDown" data-animation-delay="500">
-                    <img class="h-logo" src="https://image.wawacm.com/wawacdn/202201282325053.png"
-                    alt="Logo">
-                </div>
+<img
+  class="h-logo"
+  src="https://image.wawacm.com/2025/06/26/793174.png"
+  alt="Logo"
+  style="width: 200px; height: auto;"
+>
                 <!-- START NAVIGATION -->
                 <nav id="awd-site-nav" class="navigation animated" data-animation="fadeInDown"
                 data-animation-delay="500">
@@ -85,6 +87,10 @@
                             <li>
                                 <a href="https://monitor.wawacm.com/" data-slide="contact">
                                     网站状态
+                                </a>
+                            </li><li>
+                                <a href="http://love.wawacm.com/" data-slide="contact">
+                                    表白生成
                                 </a>
                             </li>
 							<li>
