--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
             </div>
             <!-- START SITE HEADER -->
             <header id="awd-site-header">
+			
 <img
   class="h-logo"
   src="https://image.wawacm.com/2025/06/26/793174.png"
   alt="Logo"
-  style="width: 200px; height: auto;"
+  style="width: 170px; height: auto; position: relative; top: -40px;"
 >
                 <!-- START NAVIGATION -->
                 <nav id="awd-site-nav" class="navigation animated" data-animation="fadeInDown"
