--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
   class="h-logo"
   src="https://image.wawacm.com/2025/06/26/793174.png"
   alt="Logo"
-  style="width: 170px; height: auto; position: relative; top: -40px;"
+  style="width: 150px;
+         height: auto;
+         position: relative;
+         top: -30px;
+         left: -20px;" 
 >
+
                 <!-- START NAVIGATION -->
                 <nav id="awd-site-nav" class="navigation animated" data-animation="fadeInDown"
                 data-animation-delay="500">
@@ -168,9 +173,9 @@
                         <img src="https://image.wawacm.com/wawacdn/seal.png" width="88" height="38"
                         />
                     </a>
-                    <a target="_blank" href="http://c.trustutn.org/show?type=1&sn=201903101006443014">
-                        <img src="https://image.wawacm.com/wawacdn/HTB1_Ln0UiLaK1RjSZFx761mPFXaT.png"
-                        width="88" height="30" />
+                    <a target="_blank" href="./osrz.html">
+                        <img src="https://newcdnjs.wawacm.com/rz/mb/images/label.png"
+                        width="85" height="35" />
                     </a>
                     <a target="_blank" href="http://t.knet.cn/">
                         <img src="https://image.wawacm.com/wawacdn/HTB1yoYvUgDqK1RjSZSy761xEVXal.png"
